Улучшены сканирование, CI, темы оформления и интернационализация.
Масштабное обновление, улучшающее сканирование репозиториев, рабочие процессы CI, генератор пользовательского интерфейса, темы и переводы. Добавлены файлы .editorconfig, CHANGELOG.md и SUPPORT.md, скрипт проверки перед развертыванием и документация по развертыванию; обновлены рабочие процессы GitHub Actions, теперь они включают тайм-ауты в минутах и ​​кэширование pip. Расширен GitHubClient для поддержки множества расширений/имен файлов, одновременной защищенной загрузки файлов, улучшенных сообщений об ошибках HTTP, настраиваемых ограничений на количество строк при загрузке и более надежного анализа контента. Расширено обнаружение стека и добавлены новые проверки качества/CI/документации (наличие журнала изменений/документации, проверка YAML в рабочем процессе, кэш/тайм-ауты CI, обнаружение использования README, эвристики линтинга и тестирования, поддержка Dart и т. д.). Обновлены метки, темы и шаблоны веб-генератора, а также добавлено кэширование качества в реальном времени и обработка среды выполнения Vercel в основном приложении. Включает тесты и незначительные доработки интерфейса/статического кода.

--- a/config.yml.example
+++ b/config.yml.example
@@ -4,16 +4,18 @@ app:
   title_separator: "-"
 
 github:
-  token: ""
-  app_token: ""
+  token: ""        # optional, improves GitHub API rate limits
+  app_token: ""    # optional, preferred if you use GitHub App auth
   api_base: "https://api.github.com"
 
 database:
-  url: "sqlite:///./data/app.db"
+  url: "sqlite:///./data/app.db"   # local mode default
+  # For production (example):
+  # url: "postgresql+psycopg://user:password@host:5432/repo_inspector"
 
 scan:
   rate_limit_per_minute: 25
   daily_quota: 300
-  cache_ttl_seconds: 1800
-  repo_history_keep: 20
+  cache_ttl_seconds: 1800          # API/report cache TTL
+  repo_history_keep: 20            # number of reports kept per repository
   stale_active_job_minutes: 120
