--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,14 @@
     {
       "src": "/metrics",
       "dest": "api/index.py"
+    },
+    {
+      "src": "/generator",
+      "dest": "api/index.py"
+    },
+    {
+      "src": "/",
+      "dest": "api/index.py"
     }
   ]
 }
